# aioekosystemwroclaw

./: .flake8  .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml
.github/workflows/: ci.yaml
aioekosystemwroclaw/: __init__.py  client.py  errors.py
scripts/: tests
tests/: __init__.py  common.py  test_client.py
tests/fixtures/: pickup_data_response_1.json
